# Telegram-BetBot

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  init_dump.sql  pyproject.toml
.github/workflows/: automation.yml  flake8.yaml
buildfiles/: Dockerfile  redis.conf
migrations/: env.py
migrations/versions/: 1672ad6a53ae_new_init.py  52b68521f9c7_init_migrate.py  5ecd8ee26a91_initial_migration_for_user_model.py  6423a4c68bef_init_migrate.py  71064cc2560c_new_init.py  72f8b3558c9a_add_column_in_referrals.py  af193fd921d9_rename_column.py  beb99d940174_initial_migratio_n.py  c2078f5edf9f_initial_migration_for_user_model.py  c335c962486a_add_column_in_referrals.py  de5c3e77df32_init.py  f2be43d69c65_init_migrate.py
telegram_betbot/config_data/: config.py  db_config.py  redis_config.py
telegram_betbot/database/: __init__.py  database.py
telegram_betbot/database/entities/: referral.py  user.py
telegram_betbot/database/models/: __init__.py  base.py  bookmaker.py  bookmakers.py  referral.py  referrals.py  streamer.py  streamer_referral_link.py  streamer_referral_links.py  streamers.py  user.py  users.py
telegram_betbot/database/repositories/: __init__.py  abstract.py  referrals.py  streamers_and_bookmakers.py  user.py
telegram_betbot/database/utils/: connect_to_db.py
telegram_betbot/tgbot/: __main__.py  tgbot.py
tests/: conftest.py
tests/integration/: conftest.py  test_stairway.py
tests/utils/: alembic.py  mocked_bot.py  mocked_database.py  updates.py
(+56 files in other folders)
