[tool.poetry]
name = "telegram-betbot"
version = "0.1.0"
description = ""
authors = ["Konstantin Kiselev <konstantin.kiselev.1998@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.13.1"
psycopg = "^3.2.3"
alembic = "^1.13.3"
environs = "^11.0.0"
redis = "^5.1.1"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.35"
aiogram-dialog = "^2.2.0"
pytz = "^2024.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 3
src_paths = ["telegram_betbot", ]
skip_glob = [
    ".git",
    ".idea",
    "venv",
    ".env",
]
known_aiogram = ["aiogram", ]
known_aiogram_dialog = ["aiogram-dialog", ]
known_first_party = ["telegram_betbot"]

sections = [
    "FUTURE",
    "STDLIB",
    "AIOGRAM",
    "AIOGRAM-DIALOG",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]